--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,17 @@
   </head>
 
   <body>
-       <p class="notice"><%= notice %></p>
-       <p class="alert"><%= alert %></p>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+    <nav style="border-bottom: 1px solid black;">
+      <% if user_signed_in? %>
+        <span>Hello <%= current_user.username %></span>
+        <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+      <% else %>
+        <%= link_to "Login", new_user_session_path  %>
+        <%= link_to "Sign up", new_user_registration_path  %>
+      <% end %>
+    </nav>
     <%= yield %>
   </body>
 </html>
