--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -6,6 +6,7 @@
     <h3>Brand: <%= listing.brand %></h3>
     <h3>Style: <%= listing.style %></h3>
     <h3>Size: <%= listing.size %></h3>
+    <h3>Price: <%= listing.price %></h3>
     <h3>Description: <%= listing.description %></h3>
 
     <h4>Created by <%= listing.user.username %></h4>
