set up manage page

--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,5 +1,5 @@
 <h2>Shoes</h2>
-<%# <%= link_to "Create a new listing 👟", new_restaurant_path %>
+<%= link_to "Create a new listing", new_listing_path %>
 
 <% @listings.each do |listing| %>
   <div>
