--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,12 @@
  */
 
 @import "bootstrap/scss/bootstrap";
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+.navbar {
+    background-color: #e3f2fd;
+}
+
+h3 {
+    font-family: 'Roboto', sans-serif;
+}
