--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <body>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-    <nav style="border-bottom: 1px solid black;">
+    <nav class="navbar navbar-light" sticky-top>
       <% if user_signed_in? %>
         <span>Hello <%= current_user.username %></span>
         <%= link_to "Logout", destroy_user_session_path, method: :delete %>
