--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,12 +7,13 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <script src="https://js.stripe.com/v3/"></script>
   </head>
 
   <body>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-    <nav class="navbar navbar-light" sticky-top>
+    <nav class="navbar navbar-light sticky-top">
       <% if user_signed_in? %>
         <span>Hello <%= current_user.username %></span>
         <%= link_to "Logout", destroy_user_session_path, method: :delete %>
