--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,10 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <nav class="navbar navbar-light sticky-top">
+    <%= link_to "All Shoes", listings_path  %>
       <% if user_signed_in? %>
         <span>Hello <%= current_user.username %></span>
+        <%= link_to "My Account", account_path  %>
         <%= link_to "Logout", destroy_user_session_path, method: :delete %>
       <% else %>
         <%= link_to "Login", new_user_session_path  %>
