--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -8,6 +8,8 @@
     <h3>Size: <%= listing.size %></h3>
     <h3>Price: <%= listing.price %></h3>
     <h3>Description: <%= listing.description %></h3>
+    <%= image_tag(listing.picture) if listing.picture.attached? %>
+
 
     <h4>Created by <%= listing.user.username %></h4>
     <%= link_to "Show", listing_path(listing.id)  %>
