--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
     <p class="alert"><%= alert %></p>
     <nav class="navbar navbar-light sticky-top">
     <%= link_to "All Shoes", listings_path  %>
+    <%= link_to "Sell Some Shoes", new_listing_path %>
       <% if user_signed_in? %>
         <span>Hello <%= current_user.username %></span>
         <%= link_to "My Account", account_path  %>
