--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,3 +24,13 @@
 h3 {
     font-family: 'Roboto', sans-serif;
 }
+
+.shoe-pic {
+    width: 600px;
+    height: 400px;
+}
+
+.main-container {
+    display: flex;
+    flex-direction: column;
+}
