--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,10 +1,22 @@
-<div>
-    <h3>Brand: <%= @listing.brand %></h3>
-    <h3>Style: <%= @listing.style %></h3>
-    <h3>Size: <%= @listing.size %></h3>
-    <h3>Price: <%= @listing.price %></h3>
-    <h3>Description: <%= @listing.description %></h3>
-    <%= image_tag(@listing.picture) if @listing.picture.attached? %>
+  <div class="main-container">
+    <div class="display-card">
+        <h3>Brand: <%= @listing.brand %></h3>
+    </div>
+    <div class="display-card">
+        <h3>Style: <%= @listing.style %></h3>
+    </div>
+    <div class="display-card">
+        <h3>Size: <%= @listing.size %> (US mens)</h3>
+    </div>
+    <div class="display-card">
+        <h3>Price: $<%= @listing.price %></h3>
+    </div>
+    <div class="display-card">
+        <h3>Description: <%= @listing.description %></h3>
+    </div>
+    <div class="display-card">
+        <%= image_tag(@listing.picture, class: "shoe-pic") if @listing.picture.attached? %>
+    </div>
     <h4>Created by <%= @listing.user.username %></h4>
 </div>
     <div>
