--- a/app/views/listings/account.html.erb
+++ b/app/views/listings/account.html.erb
@@ -1,12 +1,24 @@
 <h1>My Account</h1>
   <% current_user.listings.each do |listing| %>
-  <div>
-    <h3>Brand: <%= listing.brand %></h3>
-    <h3>Style: <%= listing.style %></h3>
-    <h3>Size: <%= listing.size %></h3>
-    <h3>Price: <%= listing.price %></h3>
-    <h3>Description: <%= listing.description %></h3>
-    <%= image_tag(listing.picture) if listing.picture.attached? %>
+  <div class="main-container">
+    <div class="display-card">
+        <h3>Brand: <%= listing.brand %></h3>
+    </div>
+    <div class="display-card">
+        <h3>Style: <%= listing.style %></h3>
+    </div>
+    <div class="display-card">
+        <h3>Size: <%= listing.size %> (US mens)</h3>
+    </div>
+    <div class="display-card">
+        <h3>Price: $<%= listing.price %></h3>
+    </div>
+    <div class="display-card">
+        <h3>Description: <%= listing.description %></h3>
+    </div>
+    <div class="display-card">
+        <%= image_tag(listing.picture, class: "shoe-pic") if listing.picture.attached? %>
+    </div>
       <br>
     <%= link_to "Show", listing_path(listing.id)  %>
       <% if user_signed_in? && current_user.listings.include?(listing) %>
