--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -41,4 +41,7 @@
             });
         </script>
       </div>
+      <% if @listing.user.id != current_user.id %>
+        <%= link_to "Message #{@listing.user.username}", conversations_path(sender_id: current_user.id, recipient_id: @listing.user.id), method: "post" %>
+      <% end %>
 <%= link_to "Back", listings_path %>
