--- a/app/views/listings/account.html.erb
+++ b/app/views/listings/account.html.erb
@@ -11,7 +11,7 @@
         <h3>Size: <%= listing.size %> (US mens)</h3>
     </div>
     <div class="display-card">
-        <h3>Price: $<%= listing.price %></h3>
+        <h3>Price: A$<%= listing.price %></h3>
     </div>
     <div class="display-card">
         <h3>Description: <%= listing.description %></h3>
@@ -19,6 +19,7 @@
     <div class="display-card">
         <%= image_tag(listing.picture, class: "shoe-pic") if listing.picture.attached? %>
     </div>
+        <h4>You created this listing on <%= listing.created_at.strftime("%m/%d/%Y") %></h4>
       <br>
     <%= link_to "Show", listing_path(listing.id)  %>
       <% if user_signed_in? && current_user.listings.include?(listing) %>
