--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -12,7 +12,7 @@
         <h3>Size: <%= listing.size %> (US mens)</h3>
     </div>
     <div class="display-card">
-        <h3>Price: $<%= listing.price %></h3>
+        <h3>Price: A$<%= listing.price %></h3>
     </div>
     <div class="display-card">
         <h3>Description: <%= listing.description %></h3>
@@ -21,7 +21,7 @@
         <%= image_tag(listing.picture, class: "shoe-pic") if listing.picture.attached? %>
     </div>
 
-    <h4>Created by <%= listing.user.username %></h4>
+    <h4>Listed by <%= listing.user.username %> on <%= listing.created_at.strftime("%m/%d/%Y") %></h4>
     <%= link_to "Show", listing_path(listing.id)  %>
   </div>
 <% end %>
