--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -9,7 +9,7 @@
         <h3>Size: <%= @listing.size %> (US mens)</h3>
     </div>
     <div class="display-card">
-        <h3>Price: $<%= @listing.price %></h3>
+        <h3>Price: A$<%= @listing.price %></h3>
     </div>
     <div class="display-card">
         <h3>Description: <%= @listing.description %></h3>
@@ -17,7 +17,7 @@
     <div class="display-card">
         <%= image_tag(@listing.picture, class: "shoe-pic") if @listing.picture.attached? %>
     </div>
-    <h4>Created by <%= @listing.user.username %></h4>
+    <h4>Listed by <%= @listing.user.username %> on <%= @listing.created_at.strftime("%m/%d/%Y") %></h4>
 </div>
     <div>
       <% if @payment_button %>
@@ -44,4 +44,4 @@
       <% if @listing.user.id != current_user.id %>
         <%= link_to "Message #{@listing.user.username}", conversations_path(sender_id: current_user.id, recipient_id: @listing.user.id), method: "post" %>
       <% end %>
-<%= link_to "Back", listings_path %>
+<%= link_to 'Back', :back %>
