--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -45,4 +45,4 @@
 
 <p>We have to see you go 😢. We'd love feedback as to why you're leaving though. <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
-<%= link_to "Back", :back %>
+<%= link_to 'Back', 'javascript:history.back()' %>
