--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -1,4 +1,4 @@
 <h1>New Shoe Listing</h1>
-<%= link_to 'Back', :back %>
+<%= link_to 'Back', 'javascript:history.back()' %>
 
 <%= render partial: "form", locals: { listing: @listing } %>
