--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -44,4 +44,4 @@
       <% if @listing.user.id != current_user.id %>
         <%= link_to "Message #{@listing.user.username}", conversations_path(sender_id: current_user.id, recipient_id: @listing.user.id), method: "post" %>
       <% end %>
-<%= link_to 'Back', :back %>
+<%= link_to 'Back', 'javascript:history.back()' %>
