--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,20 +17,55 @@
 @import "bootstrap/scss/bootstrap";
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
+@mixin roboto {
+    font-family: 'Roboto', sans-serif;
+}
+
 .navbar {
     background-color: #e3f2fd;
 }
 
 h3 {
-    font-family: 'Roboto', sans-serif;
+    @include roboto;
 }
 
-.shoe-pic {
+p {
+    @include roboto;
+}
+
+.carousel-shoe-pic {
     width: 600px;
     height: 400px;
 }
 
-.main-container {
-    display: flex;
-    flex-direction: column;
+.card-img-top {
+    width: 400px;
+    height: 300px;
+}
+
+#carousel_images {
+    margin: auto;
+    max-width: 700px;
+}
+
+#carousel.carousel.slide {
+    max-width: 50%;
+    margin: auto;
+}
+
+.carousel-caption {
+    color: #fff;
+    text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
+    @include roboto;
+    right: 0;
+    bottom: 0;
+    position: absolute;
+    font-size: 30px;
+}
+
+.carousel-control-next-icon,
+.carousel-control-prev-icon {
+    filter: invert(100%);
+    height: 50px;
+    width: 50px;
 }
