--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <h1 class="main-heading">K i c k S w a p</h1>
+    <h1 class="main-heading">K I C K S W A P</h1>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark sticky-top">
