--- a/app/views/listings/account.html.erb
+++ b/app/views/listings/account.html.erb
@@ -1,32 +1,20 @@
-<h1>My Account</h1>
-  <% current_user.listings.each do |listing| %>
-  <div class="main-container">
-    <div class="display-card">
-        <h3>Brand: <%= listing.brand %></h3>
-    </div>
-    <div class="display-card">
-        <h3>Style: <%= listing.style %></h3>
-    </div>
-    <div class="display-card">
-        <h3>Size: <%= listing.size %> (US mens)</h3>
-    </div>
-    <div class="display-card">
-        <h3>Price: A$<%= listing.price %></h3>
-    </div>
-    <div class="display-card">
-        <h3>Description: <%= listing.description %></h3>
-    </div>
-    <div class="display-card">
-        <%= image_tag(listing.picture, class: "shoe-pic") if listing.picture.attached? %>
-    </div>
-        <h4>You created this listing on <%= listing.created_at.strftime("%m/%d/%Y") %></h4>
-      <br>
-    <%= link_to "Show", listing_path(listing.id)  %>
-      <% if user_signed_in? && current_user.listings.include?(listing) %>
-    <%= link_to "Delete", listing_path(listing.id), method: :delete %>
-    <%= link_to "Edit", edit_listing_path(listing.id) %>
+<h1 class="sub-heading d-flex justify-content-center">My Account</h1>
+<%= link_to "Edit Account Details", edit_user_registration_path %>
+<div class="row row-cols-1 row-cols-md-4">
+    <% current_user.listings.each do |listing| %>
+        <div class="card h-100">
+          <%= link_to  listing_path(listing.id) do %>
+            <%= image_tag(listing.picture, class: "card-img-top") if listing.picture.attached? %>
+          <% end %>
+          <div class="card-body">
+            <h5 class="card-title"><%= listing.brand %> <%= listing.style %></h5>
+            <p class="card-text">Size: <%= listing.size %> (US mens)</p>
+            <p class="card-text">Price: A$<%= listing.price %></p>
+            <p class="card-text">Description: <%= listing.description %></p>
+            <%= link_to "Delete", listing_path(listing.id), method: :delete %>
+            <%= link_to "Edit", edit_listing_path(listing.id) %>
+            <p class="card-text"><small class="text-muted">You created this listing on <%= listing.created_at.strftime("%d/%m/%Y") %></small></p>
+          </div>
+        </div>
     <% end %>
-      <br>
-      <br>
-  <% end %>
-  </div>
+</div>
