minor css button changes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -104,6 +104,12 @@ p {
     width: 50px;
 }
 
+// Account page styling
+.btn-style {
+    color: #fff;
+    text-decoration: none;
+}
+
 @media (min-width: 768px) {
     .navbar-brand.abs
         {
