--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -9,7 +9,8 @@
       <div class="carousel-item<%= " active" if listing == @listings.first %>">
           <%= link_to  listing_path(listing.id) do %>
             <%= image_tag(listing.picture, class: "carousel-shoe-pic") if listing.picture.attached? %>
-          <% end %>        <div class="carousel-caption text-dark">
+          <% end %>        
+        <div class="carousel-caption text-dark">
           <%= listing.brand %> <%= listing.style %> A$<%= listing.price %>
         </div>
       </div>
@@ -33,7 +34,7 @@
 <div class="row row-cols-1 row-cols-md-4">
     <% @listings.each do |listing| %>
         <div class="card h-100">
-          <%= link_to  listing_path(listing.id) do %>
+          <%= link_to listing_path(listing.id) do %>
             <%= image_tag(listing.picture, class: "card-img-top") if listing.picture.attached? %>
           <% end %>
         <div class="card-body">
@@ -41,7 +42,11 @@
             <p class="card-text">Size: <%= listing.size %> (US mens)</p>
             <p class="card-text">Price: A$<%= listing.price %></p>
             <p class="card-text">Description: <%= listing.description %></p>
-            <p class="card-text"><small class="text-muted">Listed by <%= listing.user.username %> on <%= listing.created_at.strftime("%d/%m/%Y") %></small></p>
+            <p class="card-text"><small class="text-muted">Listed by <%= listing.user.username %> on <%= listing.created_at.strftime("%d/%m/%Y") %></small>
+              <% if listing.user.id != current_user.id %>
+                <%= link_to "Message #{listing.user.username}", conversations_path(sender_id: current_user.id, recipient_id: listing.user.id), method: "post" %>
+              <% end %>
+            </p>
         </div>
     </div>
     <% end %>
