--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -43,7 +43,7 @@
             <p class="card-text">Price: A$<%= listing.price %></p>
             <p class="card-text">Description: <%= listing.description %></p>
             <p class="card-text"><small class="text-muted">Listed by <%= listing.user.username %> on <%= listing.created_at.strftime("%d/%m/%Y") %></small>
-              <% if listing.user.id != current_user.id %>
+              <%if user_signed_in? && listing.user.id != current_user.id %>
                 <%= link_to "Message #{listing.user.username}", conversations_path(sender_id: current_user.id, recipient_id: listing.user.id), method: "post" %>
               <% end %>
             </p>
