--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @listing) do |f| %>
+<%= form_with(model: @listing, local:true ) do |f| %>
   <%= f.label :brand %>
   <%= f.text_field :brand, required: true %>
   <br>
@@ -24,5 +24,5 @@
     <small class="form-text text-muted">Describe your shoes in as much detail as you can. Age, condition etc..</small>
   <br>
   <br>
-  <%= f.submit   %>
+  <%= f.submit %>
 <% end %>
