--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -194,14 +194,8 @@ h3 {
 }
 
 .carousel-shoe-pic {
-    width: 600px;
-    height: 400px;
-}
-
-.card-img-top {
-    width: 400px;
-    height: 300px;
-    margin: auto;
+  width: 100%;
+  height: 450px;
 }
 
 #carousel_images {
