--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -24,5 +24,5 @@
     <small class="form-text text-muted">Describe your shoes in as much detail as you can. Age, condition etc..</small>
   <br>
   <br>
-  <%= f.submit %>
+  <%= f.submit "Sell these shoes!" %>
 <% end %>
