--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -1,4 +1,11 @@
 <h1>New Shoe Listing</h1>
 <%= link_to 'Back', 'javascript:history.back()' %>
 
+    <% if flash[:messages] %>
+        <% flash[:messages].each do |message| %>
+        <p class="error-message"><%= message %></p>
+        <br>
+        <% end %>
+    <% end %>
+
 <%= render partial: "form", locals: { listing: @listing } %>
