--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -81,6 +81,11 @@
     top: 20px;
 }
 
+.form-heading {
+  @include staatliches;
+  font-size: 100px;
+}
+
 .sub-heading {
     @include staatliches;
 }
@@ -108,6 +113,9 @@
     @include lato
 }
 
+/*------------------------------
+	Account buttons
+------------------------------*/
 .ctrl-standard.fx-sliderIn {
   color: black;
   border-color: #81aaa4;
@@ -195,7 +203,7 @@ h3 {
 
 .carousel-shoe-pic {
   width: 100%;
-  height: 450px;
+  max-height: 450px;
 }
 
 #carousel_images {
@@ -223,15 +231,81 @@ h3 {
     height: 50px;
     width: 50px;
 }
+/*------------------------------
+	Form styling
+------------------------------*/
+.form-control {
+  border-radius: 0;
+  @include lato;
+}
 
-// Account page styling
+.form-control:focus {
+  box-shadow: none;
+}
 
-@media (min-width: 768px) {
-    .navbar-brand.abs
-        {
-            position: absolute;
-            width: 100%;
-            left: 0;
-            text-align: center;
-        }
-    }
+.form-group {
+  position: relative;
+  margin-bottom: 25px;
+  @include staatliches;
+}
+
+.form-group > label {
+  font-size: 16px;
+  letter-spacing: 0.5px;
+  color: #a1a2a3;
+  -webkit-transform-origin: 0 0;
+          transform-origin: 0 0;
+  -webkit-transform: scale(1.4);
+          transform: scale(1.4);
+  pointer-events: none;
+  position: relative;
+  z-index: 5;
+}
+
+.form-group > input {
+  width: 100%;
+}
+
+.form-group > label {
+  -webkit-transition: -webkit-transform 0.4s;
+  transition: -webkit-transform 0.4s;
+  transition: transform 0.4s;
+  transition: transform 0.4s, -webkit-transform 0.4s;
+  -webkit-transform-origin: 0 0;
+          transform-origin: 0 0;
+  -webkit-transform: scale(1.4) translateY(20px);
+          transform: scale(1.4) translateY(20px);
+}
+
+.form-group.not-empty > label {
+  -webkit-transform: none;
+          transform: none;
+}
+
+.form-control {
+  border: 0;
+  border-bottom: 1px solid #a1a2a3;
+}
+.form-control,
+.form-control:focus,
+.form-control:focus:hover {
+  color: black;
+  background: none;
+  outline: none;
+}
+.form-control:focus,
+.form-control:focus:hover {
+  border-bottom: 1px solid black;
+}
+
+@media only screen and (max-width: 768px) {
+  .carousel-caption {
+    font-size: 16px;
+  }
+
+  // .row-cols-md-4 {
+  //   width:100%;
+  //   float:left;
+  //   margin:0;
+  // }
+}
