devise form styling done

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -306,6 +306,22 @@ h3 {
   margin-right: 100px;
 }
 
+.form-margin-reset {
+  margin-top: 12.5%;
+}
+
+.form-margin-login {
+  margin-top: 10%;
+}
+
+.form-margin-signup {
+  margin-top: 8%;
+}
+
+.form-margin-edit-acc {
+  margin-top: 6%;
+}
+
 @media only screen and (max-width: 768px) {
   .carousel-caption {
     font-size: 16px;
