--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,21 @@
-<h2>Forgot your password?</h2>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
+<div class="container form-margin-reset">
+  <div class="row">
+    <div class="col-md-5 d-flex align-items-center">
+      <h1 class="form-heading">Password Reset</h1>
+    </div>
+      <div class="col-md-6 offset-md-1">
+        <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+        <%= devise_error_messages! %>
+        <div class="form-group">
+          <%= f.label :email %>
+          <%= f.email_field :email, autofocus: true, required: true, class: "form-control" %>
+        </div>
+        <%= f.submit "Send me password reset instructions", class: "ctrl-standard fx-sliderIn btn-style btn-lg mb-5" %>
+      </div>
+    </div>
+      <div class="user-extra-btn float-right">
+        <%= link_to "Sign Up", new_registration_path(resource_name), class: "ctrl-standard fx-sliderIn btn-style btn-lg" %>
+        <%= link_to "Log In", new_session_path(resource_name), class: "ctrl-standard fx-sliderIn btn-style btn-lg" %>
+      </div>
 <% end %>
-
-<%= render "devise/shared/links" %>
+</div>
