--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,48 +1,37 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :username %><br />
-    <%= f.text_field :username, autofocus: true, autocomplete: "username" %>
-  </div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
+<div class="container form-margin-edit-acc">
+  <div class="row">
+    <div class="col-md-5 d-flex align-items-center">
+      <h1 class="form-heading">Edit Account Details</h1>
+    </div>
+      <div class="col-md-6 offset-md-1">
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+        <%= devise_error_messages! %>
+        <div class="form-group">
+          <%= f.label :email %>
+          <%= f.email_field :email, autofocus: true, required: true, class: "form-control" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :username %>
+          <%= f.text_field :username, autofocus: true, required: true, class: "form-control" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :password %><em>(Leave blank if you don't want to change it)</em>
+          <%= f.password_field :password, autofocus: true, required: true, class: "form-control" %>
+            <% if @minimum_password_length %>
+              <em>(<%= @minimum_password_length %> characters minimum)</em>
+            <% end %>
+        </div>
+        <div class="form-group">
+          <%= f.label :password_confirmation %>
+          <%= f.password_field :password_confirmation, autofocus: true, required: true, class: "form-control" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :current_password %><em>We need your current password to confirm your changes</em>
+          <%= f.password_field :current_password, autofocus: true, required: true, class: "form-control" %>
+        </div>
+        <%= f.submit "Update", class: "ctrl-standard fx-sliderIn btn-style btn-lg" %>
+        <%= link_to "Cancel My Account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "ctrl-standard fx-sliderIn btn-style btn-lg" %>
+      </div>
+    </div>
 <% end %>
-
-<h3>Cancel my account</h3>
-
-<p>We have to see you go 😢. We'd love feedback as to why you're leaving though. <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to 'Back', 'javascript:history.back()' %>
+</div>
